# flipcase

./: .gitignore  README.md  fit_images.py  main.ipynb  main.py  pyproject.toml  requirements.txt  tab.py  utils.py
.streamlit/: config.toml
